Changed NewsCategory to enum.