@@ -8,20 +8,31 @@ import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 
 public class InMemoryUserProfileRepository implements UserProfileRepository {
-    private final Map<String, Set<NewsCategory>> cats = new ConcurrentHashMap<>();
+    private final ConcurrentHashMap<String, Set<NewsCategory>> cats = new ConcurrentHashMap<>();
 
     @Override
     public Set<NewsCategory> getCategories(UserId userId) {
-        return Collections.unmodifiableSet(cats.getOrDefault(userId.getValue(), new HashSet<>()));
+        Set<NewsCategory> set = cats.get(userId.getValue());
+        return (set == null) ? Set.of() : Set.copyOf(set);
     }
 
     @Override
     public void addCategory(UserId userId, NewsCategory category) {
-        cats.computeIfAbsent(userId.getValue(), k -> new HashSet<>()).add(category);
+        String key = userId.getValue();
+
+        cats.compute(key, (k, set) -> {
+            if (set == null) set = EnumSet.noneOf(NewsCategory.class);
+            set.add(category);
+            return set;});
     }
 
     @Override
     public void removeCategory(UserId userId, NewsCategory category) {
-        cats.computeIfPresent(userId.getValue(), (k, v) -> { v.remove(category); return v; });
+         String key = userId.getValue();
+
+        cats.computeIfPresent(key, (k, set) -> {
+            set.remove(category);
+            return set.isEmpty() ? null : set;
+        });
     }
 }
